--- a/modules/holodeckb2b-core/src/test/resources/log4j.properties
+++ b/modules/holodeckb2b-core/src/test/resources/log4j.properties
@@ -4,4 +4,4 @@ log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%-5p %c - %m%n
 
 # ================================== Root Category ====================================
-log4j.rootLogger=DEBUG, CONSOLE
+log4j.rootLogger=INFO, CONSOLE
