--- a/modules/holodeckb2b-common/pom.xml
+++ b/modules/holodeckb2b-common/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.holodeckb2b</groupId>
         <artifactId>holodeckb2b</artifactId>
-        <version>2.0.beta.2.2</version>
+        <version>2.0.beta.3.1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -25,8 +25,9 @@
             <artifactId>axis2-transport-http</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
+            <groupId>org.apache.ws.commons.axiom</groupId>
+            <artifactId>axiom-dom</artifactId>
+            <scope>runtime</scope>
         </dependency> 
         <dependency>
             <groupId>org.jdom</groupId>
@@ -36,13 +37,18 @@
             <groupId>org.simpleframework</groupId>
             <artifactId>simple-xml</artifactId>
         </dependency>
-
+    
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+        </dependency> 
+        
         <!-- Apache Tika is used to determine MIME Type -->
         <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-core</artifactId>
         </dependency>
-                
+        
         <!-- Dependencies specific for testing -->
         <dependency>
             <groupId>junit</groupId>
@@ -60,7 +66,6 @@
             <version>2.2</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
 </project>
