--- a/modules/holodeckb2b-core/pom.xml
+++ b/modules/holodeckb2b-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.holodeckb2b</groupId>
         <artifactId>holodeckb2b</artifactId>
-        <version>2.0.beta.2.2</version>
+        <version>2.0.beta.3.1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -32,6 +32,19 @@
             <artifactId>axis2-transport-http</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.ws.commons.axiom</groupId>
+            <artifactId>axiom-api</artifactId>
+        </dependency>  
+        <dependency>
+            <groupId>org.apache.ws.commons.axiom</groupId>
+            <artifactId>axiom-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.ws.commons.axiom</groupId>
+            <artifactId>axiom-dom</artifactId>
+            <scope>runtime</scope>
+        </dependency>   
+        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
         </dependency> 
@@ -51,6 +64,24 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
         </dependency>
+        
+        <!-- WS-Security libs -->
+        <dependency>
+            <groupId>org.apache.wss4j</groupId>
+            <artifactId>wss4j-ws-security-common</artifactId>
+            <version>2.0.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.wss4j</groupId>
+            <artifactId>wss4j-ws-security-dom</artifactId>
+            <version>2.0.4</version>
+            <!-- NOTE: Scope set to provided to allow for patched version, 
+                    see http://gitlab.chasquis-consulting.com/gitlabadmin/holodeck-b2b/issues/55
+            @todo: Remove when fixed version available
+            -->
+            <scope>provided</scope>
+        </dependency>
+        
         
         <!-- JUnit for testing -->
         <dependency>
