--- a/modules/holodeckb2b-distribution/pom.xml
+++ b/modules/holodeckb2b-distribution/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.holodeckb2b</groupId>
         <artifactId>holodeckb2b</artifactId>
-        <version>2.0.beta.2.2</version>
+        <version>2.0.beta.3.1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -28,22 +28,36 @@
                 <groupId>org.holodeckb2b</groupId>
                 <artifactId>holodeckb2b-core</artifactId>
             </dependency>
-            
+   
+            <!-- 
+                Add Bouncy Castle crypto provider to enable newer security algorithms
+            -->
+            <dependency>
+                <groupId>org.bouncycastle</groupId>
+                <artifactId>bcprov-jdk15on</artifactId>
+                <version>1.52</version>
+                <scope>runtime</scope>
+            </dependency>    
+                
+            <!-- Logging -->
             <dependency>
                 <groupId>log4j</groupId>
                 <artifactId>log4j</artifactId>
                 <scope>runtime</scope>
             </dependency>
-                                        
+                         
+            <!-- Database support -->
             <dependency>
                 <groupId>org.apache.derby</groupId>
                 <artifactId>derby</artifactId>
                 <version>10.10.1.1</version>
+                <scope>runtime</scope>
             </dependency>
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>5.1.21</version>
+                <scope>runtime</scope>
             </dependency>
     </dependencies>
       
