--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <groupId>org.holodeckb2b</groupId>
     <artifactId>holodeckb2b</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.beta.2.2</version>
+    <version>2.0.beta.3.1</version>
     <name>Holodeck B2B</name>
     <url>http://www.holodeck-b2b.org/</url>
     <description>
-        A Standard Open source implementation of AS4 profile of ebMS V3.
+        A Standard Open source implementation of the AS4 profile of ebMS V3.
     </description>
     <organization>
         <name>The Holodeck B2B Team</name>
@@ -76,7 +76,21 @@
                 <artifactId>axis2-transport-http</artifactId>
                 <version>${axis2-version}</version>
             </dependency>
-                   
+            <dependency>
+                <groupId>org.apache.ws.commons.axiom</groupId>
+                <artifactId>axiom-api</artifactId>
+                <version>1.2.14</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.ws.commons.axiom</groupId>
+                <artifactId>axiom-impl</artifactId>
+                <version>1.2.14</version>
+            </dependency>   
+            <dependency>
+                <groupId>org.apache.ws.commons.axiom</groupId>
+                <artifactId>axiom-dom</artifactId>
+                <version>1.2.14</version>
+            </dependency>
             <!--=============================================================== 
                 Hibernate is used to store configuration and message meta data
                 in database
@@ -159,6 +173,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.9</version>
+                <configuration>
+                    <!-- all javadoc of common and core together, so use aggregate -->
+                    <aggregate>true</aggregate>
+                </configuration>
                 <executions>
                     <execution>
                         <id>aggregate</id>
