--- a/modules/holodeckb2b-core/pom.xml
+++ b/modules/holodeckb2b-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.holodeckb2b</groupId>
         <artifactId>holodeckb2b</artifactId>
-        <version>2.0</version>
+        <version>2.1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -82,7 +82,15 @@
             <scope>provided</scope>
         </dependency>
         
-        
+        <!-- WS-Addressing libs for multi-hop support -->
+        <dependency>
+            <groupId>org.apache.axis2</groupId>
+            <artifactId>addressing</artifactId>
+            <version>1.6.2</version>
+            <type>mar</type>
+            <scope>runtime</scope>
+        </dependency>
+                
         <!-- JUnit for testing -->
         <dependency>
             <groupId>junit</groupId>
