Improved logging with possibility to log the SOAP envelope of every received and sent message

--- a/modules/holodeckb2b-distribution/src/main/configurations/log4j.properties
+++ b/modules/holodeckb2b-distribution/src/main/configurations/log4j.properties
@@ -42,7 +42,7 @@ log4j.appender.holodeckb2b_FILE.Append=true
 log4j.appender.holodeckb2b_FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.holodeckb2b_FILE.layout.ConversionPattern=%d{ISO8601} [%-5p] %c %x - %m%n
 
-# -- Error logging 
+# -- Error reporting 
 log4j.appender.error_FILE=org.apache.log4j.RollingFileAppender
 log4j.appender.error_FILE.File=logs/ebms_errors.log
 log4j.appender.error_FILE.MaxFileSize=5120KB
@@ -50,6 +50,21 @@ log4j.appender.error_FILE.Append=true
 log4j.appender.error_FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.error_FILE.layout.ConversionPattern=%d{ISO8601} - %c - %m%n
 
+# -- SOAP Envelope log inbound
+log4j.appender.soapenv_in_FILE=org.apache.log4j.RollingFileAppender
+log4j.appender.soapenv_in_FILE.File=logs/soapheaders.log
+log4j.appender.soapenv_in_FILE.MaxFileSize=5120KB
+log4j.appender.soapenv_in_FILE.Append=true
+log4j.appender.soapenv_in_FILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.soapenv_in_FILE.layout.ConversionPattern=%d{ISO8601} - %m%n
+
+# -- SOAP Envelope log outbound
+log4j.appender.soapenv_out_FILE=org.apache.log4j.RollingFileAppender
+log4j.appender.soapenv_out_FILE.File=logs/soapheaders.log
+log4j.appender.soapenv_out_FILE.MaxFileSize=5120KB
+log4j.appender.soapenv_out_FILE.Append=true
+log4j.appender.soapenv_out_FILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.soapenv_out_FILE.layout.ConversionPattern=%d{ISO8601} - %m%n
 
 # -------------- Declaring loggers ----------------
 log4j.logger.org.holodeckb2b=DEBUG, holodeckb2b_FILE
@@ -57,17 +72,24 @@ log4j.logger.org.holodeckb2b=DEBUG, holodeckb2b_FILE
 log4j.logger.org.holodeckb2b.ebms3.workers=ERROR, holodeckb2b_FILE
 log4j.logger.org.holodeckb2b.as4.workers=ERROR, holodeckb2b_FILE
 log4j.logger.org.holodeckb2b.ebms3.pulling.PullWorker=ERROR, holodeckb2b_FILE
+log4j.logger.org.holodeckb2b.common.handler.BaseHandler=ERROR, holodeckb2b_FILE
 
+# Error reporting log
 log4j.logger.org.holodeckb2b.msgproc.errors=INFO, error_FILE
+
+# SOAP Envelope loggers
+log4j.logger.org.holodeckb2b.msgproc.soapenvlog.IN=INFO, soapenv_in_FILE
+log4j.logger.org.holodeckb2b.msgproc.soapenvlog.OUT=INFO, soapenv_out_FILE
 
 # -------------- Setting Additivity ----------------
 log4j.additivity.org.holodeckb2b=false
 log4j.additivity.org.holodeckb2b.ebms3.workers=false
-
-log4j.additivity.org.holodeckb2b.msgproc.errors=false
 log4j.additivity.org.holodeckb2b.as4.workers=false
 log4j.additivity.org.holodeckb2b.ebms3.pulling.PullWorker=false
+log4j.additivity.org.holodeckb2b.common.handler.BaseHandler=false
 
+log4j.additivity.org.holodeckb2b.msgproc.errors=false
+log4j.additivity.org.holodeckb2b.msgproc.soapenvlog=false
 #
 #================================= Hibernate Logging ==================================
 #
