Correction to SOAP envelope logger to prevent manipulation of Axiom structure. Fine tuned log settings.

--- a/modules/holodeckb2b-distribution/src/main/configurations/log4j.properties
+++ b/modules/holodeckb2b-distribution/src/main/configurations/log4j.properties
@@ -1,6 +1,9 @@
 # =====================================================================================
-#  	
+#
+#                        Holodeck B2B Logging Configuration
 #   	
+# 
+#
 # =====================================================================================
 
 # ================================= CONSOLE Logging ===================================
@@ -52,7 +55,7 @@ log4j.appender.error_FILE.layout.ConversionPattern=%d{ISO8601} - %c - %m%n
 
 # -- SOAP Envelope log inbound
 log4j.appender.soapenv_in_FILE=org.apache.log4j.RollingFileAppender
-log4j.appender.soapenv_in_FILE.File=logs/soapheaders.log
+log4j.appender.soapenv_in_FILE.File=logs/soapin.log
 log4j.appender.soapenv_in_FILE.MaxFileSize=5120KB
 log4j.appender.soapenv_in_FILE.Append=true
 log4j.appender.soapenv_in_FILE.layout=org.apache.log4j.PatternLayout
@@ -60,7 +63,7 @@ log4j.appender.soapenv_in_FILE.layout.ConversionPattern=%d{ISO8601} - %m%n
 
 # -- SOAP Envelope log outbound
 log4j.appender.soapenv_out_FILE=org.apache.log4j.RollingFileAppender
-log4j.appender.soapenv_out_FILE.File=logs/soapheaders.log
+log4j.appender.soapenv_out_FILE.File=logs/soapout.log
 log4j.appender.soapenv_out_FILE.MaxFileSize=5120KB
 log4j.appender.soapenv_out_FILE.Append=true
 log4j.appender.soapenv_out_FILE.layout=org.apache.log4j.PatternLayout
@@ -89,7 +92,9 @@ log4j.additivity.org.holodeckb2b.ebms3.pulling.PullWorker=false
 log4j.additivity.org.holodeckb2b.common.handler.BaseHandler=false
 
 log4j.additivity.org.holodeckb2b.msgproc.errors=false
-log4j.additivity.org.holodeckb2b.msgproc.soapenvlog=false
+log4j.additivity.org.holodeckb2b.msgproc.soapenvlog.IN=false
+log4j.additivity.org.holodeckb2b.msgproc.soapenvlog.OUT=false
+
 #
 #================================= Hibernate Logging ==================================
 #
@@ -134,20 +139,5 @@ log4j.logger.org.hibernate.impl.SessionFactoryObjectFactory=INFO, HibFILE
 log4j.logger.org.hibernate.cfg.annotations.Version=INFO, HibFILE
 
 # -------------- Setting Additivity ----------------
-log4j.additivity.org.hibernate.cfg.Environment=false
-log4j.additivity.org.hibernate.ejb.Version=false
-log4j.additivity.org.hibernate.cfg.AnnotationBinder=false
-log4j.additivity.org.hibernate.cfg.annotations.EntityBinder=false
-log4j.additivity.org.hibernate.cfg.AnnotationConfiguration=false
-log4j.additivity.org.hibernate.connection.C3P0ConnectionProvider=false
-log4j.additivity.com.mchange.v2.log.MLog=false
-log4j.additivity.com.mchange.v2.c3p0.C3P0Registry=false
-log4j.additivity.com.mchange.v2.c3p0.impl.AbstractPoolBackedDataSource=false
-log4j.additivity.org.hibernate.cfg.SettingsFactory=false
-log4j.additivity.org.hibernate.dialect.Dialect=false
-log4j.additivity.org.hibernate.transaction.TransactionFactoryFactory=false
-log4j.additivity.org.hibernate.transaction.TransactionManagerLookupFactory=false
-log4j.additivity.org.hibernate.hql.ast.ASTQueryTranslatorFactory=false
-log4j.additivity.org.hibernate.impl.SessionFactoryImpl=false
-log4j.additivity.org.hibernate.impl.SessionFactoryObjectFactory=false
-log4j.additivity.org.hibernate.cfg.annotations.Version=false
+log4j.additivity.org.hibernate=false
+log4j.additivity.org.mchange=false
