--- a/modules/holodeckb2b-distribution/pom.xml
+++ b/modules/holodeckb2b-distribution/pom.xml
@@ -45,7 +45,13 @@
                 <artifactId>log4j</artifactId>
                 <scope>runtime</scope>
             </dependency>
-                         
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>1.7.12</version>
+                <scope>runtime</scope>
+            </dependency>
+         
             <!-- Database support -->
             <dependency>
                 <groupId>org.apache.derby</groupId>
