Adopted maven license configuration for this project

--- a/pom.xml
+++ b/pom.xml
@@ -241,12 +241,16 @@
                   <exclude>**/*.ico</exclude>
                   <!-- IntelliJ Idea project files -->
                   <exclude>**/*.iml</exclude>
+                  <!-- Image files -->
+                  <exclude>**/*.JPG*</exclude>
                   <!-- JavaCC input files -->
                   <exclude>**/*.jj</exclude>
                   <!-- JavaCC JJTree input files -->
                   <exclude>**/*.jjt</exclude>
                   <!-- Java KeyStore files -->
                   <exclude>**/*.jks</exclude>
+                  <!-- Log files -->
+                  <exclude>**/*.log</exclude>
                   <!-- Automatically created mapping files -->
                   <exclude>**/*.map</exclude>
                   <!-- MD5 hash files -->
@@ -291,6 +295,7 @@
                   <!-- Special license files without extension -->
                   <exclude>**/NOTICE</exclude>
                   <exclude>**/LICENSE</exclude>
+                  <exclude>**/ignore_me</exclude>
                 </excludes>
               </configuration>
             </plugin>
