--- a/modules/holodeckb2b-distribution/pom.xml
+++ b/modules/holodeckb2b-distribution/pom.xml
@@ -6,7 +6,6 @@
         <groupId>org.holodeckb2b</groupId>
         <artifactId>holodeckb2b</artifactId>
         <version>2.0-rc2</version>
-        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -17,58 +16,61 @@
 
     <dependencies>
  
-            <!--=============================================================== 
-                First the modules of Holodeck itself 
-            =============================================================== -->
-            <dependency>
-                <groupId>org.holodeckb2b</groupId>
-                <artifactId>holodeckb2b-interfaces</artifactId>
-            </dependency>
-            <dependency>
-                <groupId>org.holodeckb2b</groupId>
-                <artifactId>holodeckb2b-common</artifactId>
-            </dependency>
-            <dependency>
-                <groupId>org.holodeckb2b</groupId>
-                <artifactId>holodeckb2b-core</artifactId>
-            </dependency>
-   
-            <!-- 
-                Add Bouncy Castle crypto provider to enable newer security algorithms
-            -->
-            <dependency>
-                <groupId>org.bouncycastle</groupId>
-                <artifactId>bcprov-jdk15on</artifactId>
-                <version>1.52</version>
-                <scope>runtime</scope>
-            </dependency>    
-                
-            <!-- Logging -->
-            <dependency>
-                <groupId>log4j</groupId>
-                <artifactId>log4j</artifactId>
-                <scope>runtime</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-log4j12</artifactId>
-                <version>1.7.12</version>
-                <scope>runtime</scope>
-            </dependency>
-         
-            <!-- Database support -->
-            <dependency>
-                <groupId>org.apache.derby</groupId>
-                <artifactId>derby</artifactId>
-                <version>10.10.1.1</version>
-                <scope>runtime</scope>
-            </dependency>
-            <dependency>
-                <groupId>mysql</groupId>
-                <artifactId>mysql-connector-java</artifactId>
-                <version>5.1.21</version>
-                <scope>runtime</scope>
-            </dependency>
+        <!--=============================================================== 
+            First the modules of Holodeck itself 
+        =============================================================== -->
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>holodeckb2b-interfaces</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>holodeckb2b-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>holodeckb2b-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>holodeckb2b-interfaces</artifactId>
+        </dependency>   
+        <!-- 
+            Add Bouncy Castle crypto provider to enable newer security algorithms
+        -->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.52</version>
+            <scope>runtime</scope>
+        </dependency>    
+
+        <!-- Logging -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.12</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <!-- Database support -->
+        <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derby</artifactId>
+            <version>10.10.1.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.21</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
       
     <build>
