Include thread id in logging and add options for http wire logging

--- a/modules/holodeckb2b-distribution/src/main/configurations/log4j.properties
+++ b/modules/holodeckb2b-distribution/src/main/configurations/log4j.properties
@@ -43,7 +43,7 @@ log4j.appender.holodeckb2b_FILE.File=logs/holodeckb2b.log
 log4j.appender.holodeckb2b_FILE.MaxFileSize=5120KB
 log4j.appender.holodeckb2b_FILE.Append=true
 log4j.appender.holodeckb2b_FILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.holodeckb2b_FILE.layout.ConversionPattern=%d{ISO8601} [%-5p] %c %x - %m%n
+log4j.appender.holodeckb2b_FILE.layout.ConversionPattern=%d{ISO8601} (%t)[%-5p] %c - %m%n
 
 # -- Error reporting 
 log4j.appender.error_FILE=org.apache.log4j.RollingFileAppender
@@ -76,6 +76,8 @@ log4j.logger.org.holodeckb2b.ebms3.workers=ERROR, holodeckb2b_FILE
 log4j.logger.org.holodeckb2b.as4.workers=ERROR, holodeckb2b_FILE
 log4j.logger.org.holodeckb2b.ebms3.pulling.PullWorker=ERROR, holodeckb2b_FILE
 log4j.logger.org.holodeckb2b.common.handler.BaseHandler=ERROR, holodeckb2b_FILE
+log4j.logger.org.holodeckb2b.pmode.xml.PModeWatcher=INFO, holodeckb2b_FILE
+log4j.logger.org.holodeckb2b.as4.receptionawareness.RetransmissionWorker=INFO, holodeckb2b_FILE
 
 # Error reporting log
 log4j.logger.org.holodeckb2b.msgproc.errors=INFO, error_FILE
@@ -90,10 +92,37 @@ log4j.additivity.org.holodeckb2b.ebms3.workers=false
 log4j.additivity.org.holodeckb2b.as4.workers=false
 log4j.additivity.org.holodeckb2b.ebms3.pulling.PullWorker=false
 log4j.additivity.org.holodeckb2b.common.handler.BaseHandler=false
+log4j.additivity.org.holodeckb2b.as4.receptionawareness.RetransmissionWorker=false
 
 log4j.additivity.org.holodeckb2b.msgproc.errors=false
 log4j.additivity.org.holodeckb2b.msgproc.soapenvlog.IN=false
 log4j.additivity.org.holodeckb2b.msgproc.soapenvlog.OUT=false
+log4j.additivity.org.holodeckb2b.pmode.xml.PModeWatcher=false
+
+#
+#================================= HTTP Logging ==================================
+#
+# Change the log level to DEBUG to see what data is exchanged "on the wire"
+log4j.logger.httpclient.wire=OFF, http_wire_FILE
+log4j.additivity.httpclient.wire=false
+
+log4j.appender.http_wire_FILE=org.apache.log4j.RollingFileAppender
+log4j.appender.http_wire_FILE.File=logs/wire.log
+log4j.appender.http_wire_FILE.MaxFileSize=5120KB
+log4j.appender.http_wire_FILE.Append=true
+log4j.appender.http_wire_FILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.http_wire_FILE.layout.ConversionPattern=%d{ISO8601} (%t) %m%n
+
+
+log4j.logger.org.apache.commons.httpclient=WARN, httpclient_FILE
+log4j.additivity.org.apache.commons.httpclient=false
+
+log4j.appender.httpclient_FILE=org.apache.log4j.RollingFileAppender
+log4j.appender.httpclient_FILE.File=logs/httpclient.log
+log4j.appender.httpclient_FILE.MaxFileSize=5120KB
+log4j.appender.httpclient_FILE.Append=true
+log4j.appender.httpclient_FILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.httpclient_FILE.layout.ConversionPattern=%d{ISO8601} (%t)[%-5p] %c - %m%n
 
 #
 #================================= Hibernate Logging ==================================
