Refactored Axis2Utils: general methods to common module, Sending of message units to separate class

--- a/modules/holodeckb2b-common/pom.xml
+++ b/modules/holodeckb2b-common/pom.xml
@@ -53,7 +53,15 @@
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-core</artifactId>
         </dependency>
-        
+
+        <!-- Santuario is used to convert between Axiom and DOM XML -->
+        <dependency>
+            <groupId>org.apache.santuario</groupId>
+            <artifactId>xmlsec</artifactId>
+            <type>jar</type>            
+            <version>2.0.5</version>
+        </dependency>
+                        
         <!-- Dependencies specific for testing -->
         <dependency>
             <groupId>junit</groupId>
