--- a/modules/interfaces/pom.xml
+++ b/modules/interfaces/pom.xml
@@ -22,6 +22,7 @@
         <groupId>org.holodeckb2b</groupId>
         <artifactId>holodeckb2b</artifactId>
         <version>2.0.0</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>holodeckb2b-interfaces</artifactId>
     <packaging>jar</packaging>
