--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
         <module>modules/holodeckb2b-common</module>
         <module>modules/holodeckb2b-core</module>
         <module>modules/holodeckb2b-distribution</module>
-        <module>modules/interfaces</module>
+        <module>modules/holodeckb2b-interfaces</module>
     </modules>
 
     <licenses>
