--- a/modules/holodeckb2b-common/pom.xml
+++ b/modules/holodeckb2b-common/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.holodeckb2b</groupId>
         <artifactId>holodeckb2b</artifactId>
-        <version>2.0.0</version>
+        <version>2.1.0-SNAPSHOT-1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
