--- a/pom.xml
+++ b/pom.xml
@@ -36,16 +36,16 @@
     </organization>
         
     <properties>
-        <axis2-version>1.6.3</axis2-version>
+        <axis2-version>1.6.4</axis2-version>
         <axiom-version>1.2.14</axiom-version>
         <netbeans.hint.license>gpl30</netbeans.hint.license>
     </properties>
     
     <modules>
+        <module>modules/holodeckb2b-interfaces</module>
         <module>modules/holodeckb2b-common</module>
         <module>modules/holodeckb2b-core</module>
         <module>modules/holodeckb2b-distribution</module>
-        <module>modules/holodeckb2b-interfaces</module>
     </modules>
 
     <licenses>
@@ -123,12 +123,12 @@
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-core</artifactId>
-                <version>5.0.5.Final</version>
+                <version>5.0.9.Final</version>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-entitymanager</artifactId>
-                <version>5.0.5.Final</version>
+                <version>5.0.9.Final</version>
                 <scope>runtime</scope>
             </dependency>
             
@@ -144,7 +144,7 @@
             <dependency>
                 <groupId>xerces</groupId>
                 <artifactId>xercesImpl</artifactId>
-                <version>2.10.0</version>
+                <version>2.11.0</version>
                 <scope>runtime</scope>
             </dependency>
             <dependency>
@@ -160,13 +160,23 @@
             <dependency>
                 <groupId>org.apache.tika</groupId>
                 <artifactId>tika-core</artifactId>
-                <version>1.4</version>
+                <version>1.13</version>
             </dependency>
 
             <dependency>
                 <groupId>commons-codec</groupId>
                 <artifactId>commons-codec</artifactId>
                 <version>1.10</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>2.5</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.derby</groupId>
+                <artifactId>derby</artifactId>
+                <version>10.10.2.0</version>
             </dependency>
             <!--=============================================================== 
                 Test dependencies
