--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
         <module>modules/holodeckb2b-interfaces</module>
         <module>modules/holodeckb2b-common</module>
         <module>modules/holodeckb2b-axis2</module>
+        <module>modules/holodeckb2b-service</module>
         <module>modules/holodeckb2b-core</module>
         <module>modules/holodeckb2b-distribution</module>
     </modules>
@@ -79,6 +80,11 @@
             <dependency>
                 <groupId>org.holodeckb2b</groupId>
                 <artifactId>holodeckb2b-core</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.holodeckb2b</groupId>
+                <artifactId>holodeckb2b-service</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
