--- a/pom.xml
+++ b/pom.xml
@@ -36,16 +36,18 @@
     </organization>
         
     <properties>
-        <axis2-version>1.6.3</axis2-version>
+        <axis2-version>1.6.4</axis2-version>
         <axiom-version>1.2.14</axiom-version>
         <netbeans.hint.license>gpl30</netbeans.hint.license>
+        <hibernate.version>5.0.9.Final</hibernate.version>
+        <wss4j.version>2.0.4</wss4j.version>
     </properties>
     
     <modules>
+        <module>modules/holodeckb2b-interfaces</module>
         <module>modules/holodeckb2b-common</module>
         <module>modules/holodeckb2b-core</module>
         <module>modules/holodeckb2b-distribution</module>
-        <module>modules/holodeckb2b-interfaces</module>
     </modules>
 
     <licenses>
@@ -123,12 +125,12 @@
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-core</artifactId>
-                <version>5.0.5.Final</version>
+                <version>${hibernate.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-entitymanager</artifactId>
-                <version>5.0.5.Final</version>
+                <version>${hibernate.version}</version>
                 <scope>runtime</scope>
             </dependency>
             
@@ -160,7 +162,7 @@
             <dependency>
                 <groupId>org.apache.tika</groupId>
                 <artifactId>tika-core</artifactId>
-                <version>1.4</version>
+                <version>1.13</version>
             </dependency>
 
             <dependency>
@@ -168,6 +170,38 @@
                 <artifactId>commons-codec</artifactId>
                 <version>1.10</version>
             </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>2.5</version>
+            </dependency>
+            
+            <!-- Santuario is used to convert between Axiom and DOM XML -->
+            <dependency>
+                <groupId>org.apache.santuario</groupId>
+                <artifactId>xmlsec</artifactId>
+                <version>2.0.5</version>
+            </dependency>
+
+            <!-- WS-Security libs -->
+            <dependency>
+                <groupId>org.apache.wss4j</groupId>
+                <artifactId>wss4j-ws-security-common</artifactId>
+                <version>${wss4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.wss4j</groupId>
+                <artifactId>wss4j-ws-security-dom</artifactId>
+                <version>${wss4j.version}</version>
+            </dependency>
+            
+            <!--  Derby DB -->
+            <dependency>
+                <groupId>org.apache.derby</groupId>
+                <artifactId>derby</artifactId>
+                <version>10.12.1.1</version>
+            </dependency>
+            
             <!--=============================================================== 
                 Test dependencies
             =============================================================== -->
@@ -193,7 +227,7 @@
                 <plugin>
                   <groupId>org.codehaus.mojo</groupId>
                   <artifactId>build-helper-maven-plugin</artifactId>
-                  <version>1.10</version>
+                  <version>1.11</version>
                   <executions>
                     <execution>
                       <id>parse-version</id>
@@ -209,7 +243,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>2.10.3</version>
+                    <version>2.10.4</version>
                     <configuration>
                         <!-- all javadoc of common and core together, so use aggregate -->
                         <aggregate>true</aggregate>
@@ -227,7 +261,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-resources-plugin</artifactId>
-                    <version>2.7</version>
+                    <version>3.0.1</version>
                     <configuration>
                         <encoding>UTF-8</encoding>
                     </configuration>
