--- a/pom.xml
+++ b/pom.xml
@@ -310,18 +310,9 @@
                     </configuration>
                 </plugin>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>2.13</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.apache.maven.surefire</groupId>
-                            <artifactId>surefire-junit47</artifactId>
-                            <version>2.19.1</version>
-                        </dependency>
-                    </dependencies>
-                    <!--configuration>
-                        <groups>com.holodeckb2b.common.junit.integ.IntegrationTest</groups>
-                    </configuration-->
                     <executions>
                         <execution>
                             <id>integration-test</id>
@@ -329,11 +320,12 @@
                                 <goal>integration-test</goal>
                                 <goal>verify</goal>
                             </goals>
-                            <!--configuration>
-                                <includes>
-                                    <include>**/*.class</include>
-                                </includes>
-                            </configuration-->
+                        </execution>
+                        <execution>
+                            <id>verify</id>
+                            <goals>
+                                <goal>verify</goal>
+                            </goals>
                         </execution>
                     </executions>
                 </plugin>
