--- a/modules/holodeckb2b-persistency/pom.xml
+++ b/modules/holodeckb2b-persistency/pom.xml
@@ -27,7 +27,7 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>default-persistency</artifactId>
+    <artifactId>holodeckb2b-persistency</artifactId>
     <packaging>jar</packaging>
     <name>Holodeck B2B - Default Persistency Provider</name>
 
